<resources>
    <string name="app_name">HotelApp</string>
    <string name="registration">Hotel</string>
    <string name="text_bottom">log in to your account </string>
    <string name="btnSignIn">SignIn </string>
    <string name="btnRegister">Register </string>
    <string name="btnSave">continue </string>
    <string name="btnSend">Sand </string>
    <string name="reg_bottom">Create your account</string>
    <string name="signIn_bottom">LogIn</string>
    <string name="code_bottom">enter your code</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>