<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/see"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="60sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/text_bottom"
        android:layout_alignParentBottom="true"
        android:textSize="35sp"
        android:textColor="@color/text_bottom"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/text_bottom"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_above="@id/text_bottom"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:text="@string/btnSignIn" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onTestButtonClick"
            android:layout_weight="1"
            android:layout_marginLeft="6dp"
            android:text="@string/btnRegister" />
    </LinearLayout>
</RelativeLayout>