<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/palm2"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        >

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailField"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20dp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passField"
            android:hint="Password"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20dp"
            app:met_floatingLabel="highlight"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true"
            />

    </LinearLayout>
    <TextView
        android:id="@+id/text_bottom"
        android:layout_alignParentBottom="true"
        android:textSize="35sp"
        android:textColor="#AC24E6"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/reg_bottom"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_above="@id/text_bottom"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:text="@string/btnSave" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:text="@string/btnSignIn" />


    </LinearLayout>

</RelativeLayout>